# faquilizer

./: pyproject.toml
faquilizer/: template.py
src/faquilizer/: __init__.py  template.py
