[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faqulizer"
version = "0.1.6"
authors = [
  { name="Mike Levin", email="pipulate@gmail.com" },
]
description = "A Jupyter Notebook template for processing lists of URLs with AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pipulate>=1.2.3",
    "google-generativeai",
    "requests",
    "beautifulsoup4",
    "pandas",
    "openpyxl"
]

[project.urls]
"Homepage" = "https://github.com/miklevin/pipulate"

# ✅ MANUAL OVERRIDE: EXPLICITLY DECLARE THE PACKAGE
[tool.setuptools]
packages = ["faquilizer"]
